[package]
name = "fib-sequence"
description = "A library for retrieving fibonacci numbers in base 10"
authors = ["Kia Strawberries"]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/uwukia/fib-sequence"
keywords = ["fibonacci"]
categories = ["mathematics"]

[dependencies]

[dev-dependencies]
rand = "0.8.4"